# linkbox-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: client.rs  main.rs  model.rs  store.rs
