[package]
name = "linkbox-cli"
version = "0.1.0"
authors = ["Ash B <ash.b.7558@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1.0"

structopt = "0.3"
rustyline = "8.2"
rustyline-derive = "0.4.0"
unicode-width = "0.1"
